--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="{% url 'home' %}">
-                                    <img src="{% static 'img/logo.png' %}" alt="">
+                                    <h2 class="font-monospace">LWN</h2>
                                 </a>
                             </div>
                         </div>
@@ -53,10 +53,16 @@
                         </div>
                         <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                             <div class="log_chat_area d-flex align-items-center">
+                                {% if user.is_authenticated %}
+                                <a href="{% url 'user_logout' %}" class="login">
+                                    <span>Logout</span>
+                                </a>
+                                {% else %}
                                 <a href="#test-form" class="login popup-with-form">
                                     <i class="flaticon-user"></i>
                                     <span>log in</span>
                                 </a>
+                                {% endif %}
                                 <div class="live_chat_btn">
                                     <a class="boxed_btn_orange" href="#">
                                         <i class="fa fa-phone"></i>
@@ -73,6 +79,13 @@
             </div>
         </div>
     </header>
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
     {% block content %}
     {% endblock %}
     <footer class="footer footer_bg_1">
@@ -169,9 +182,9 @@
                     <div class="col-xl-12">
                         <p class="copy_right text-center">
                             Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script> All rights reserved | This
-                            template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
-                                href="https://colorlib.com" target="_blank">Colorlib</a>
+                            <script>document.write(new Date().getFullYear());</script> All rights reserved | LWN
+                            - Learn with Nadim <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
+                                href="https://www.github.com/nadeemmaahmud/" target="_blank">Nadim Mahmud</a>
                         </p>
                     </div>
                 </div>
@@ -179,22 +192,23 @@
         </div>
     </footer>
 
-    <form id="test-form" class="white-popup-block mfp-hide">
+    <div id="test-form" class="white-popup-block mfp-hide">
         <div class="popup_box ">
             <div class="popup_inner">
                 <div class="logo text-center">
-                    <a href="#">
+                    <a href="{% url 'home' %}">
                         <img src="{% static 'img/form-logo.png' %}" alt="">
                     </a>
                 </div>
                 <h3>Sign in</h3>
-                <form action="#">
+                <form method="post" action="{% url 'user_login' %}">
+                    {% csrf_token %}
                     <div class="row">
                         <div class="col-xl-12 col-md-12">
-                            <input type="email" placeholder="Enter email">
+                            <input type="email" name="username" placeholder="Enter email" required>
                         </div>
                         <div class="col-xl-12 col-md-12">
-                            <input type="password" placeholder="Password">
+                            <input type="password" name="password" placeholder="Password" required>
                         </div>
                         <div class="col-xl-12">
                             <button type="submit" class="boxed_btn_orange">Sign in</button>
@@ -205,27 +219,28 @@
                 </p>
             </div>
         </div>
-    </form>
-
-    <form id="test-form2" class="white-popup-block mfp-hide">
+    </div>
+    
+    <div id="test-form2" class="white-popup-block mfp-hide">
         <div class="popup_box ">
             <div class="popup_inner">
                 <div class="logo text-center">
-                    <a href="#">
+                    <a href="{% url 'home' %}">
                         <img src="{% static 'img/form-logo.png' %}" alt="">
                     </a>
                 </div>
                 <h3>Resistration</h3>
-                <form action="#">
+                <form method="post" action="{% url 'user_register' %}">
+                    {% csrf_token %}
                     <div class="row">
                         <div class="col-xl-12 col-md-12">
-                            <input type="email" placeholder="Enter email">
+                            <input type="email" name="username" placeholder="Enter email">
                         </div>
                         <div class="col-xl-12 col-md-12">
-                            <input type="password" placeholder="Password">
+                            <input type="password" name="password" placeholder="Password">
                         </div>
                         <div class="col-xl-12 col-md-12">
-                            <input type="Password" placeholder="Confirm password">
+                            <input type="Password" name="password2" placeholder="Confirm password">
                         </div>
                         <div class="col-xl-12">
                             <button type="submit" class="boxed_btn_orange">Sign Up</button>
@@ -234,8 +249,9 @@
                 </form>
             </div>
         </div>
-    </form>
-
+    </div>
+    
+    
     <script src="{% static 'js/vendor/modernizr-3.5.0.min.js' %}"></script>
     <script src="{% static 'js/vendor/jquery-1.12.4.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
@@ -254,14 +270,14 @@
     <script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
     <script src="{% static 'js/plugins.js' %}"></script>
     <script src="{% static 'js/gijgo.min.js' %}"></script>
-
+    
     <script src="{% static 'js/contact.js' %}"></script>
     <script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script>
     <script src="{% static 'js/jquery.form.js' %}"></script>
     <script src="{% static 'js/jquery.validate.min.js' %}"></script>
     <script src="{% static 'js/mail-script.js' %}"></script>
-
+    
     <script src="{% static 'js/main.js' %}"></script>
-</body>
-
-</html>
+    </body>
+    
+    </html>
