--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,9 @@
     <link rel="stylesheet" href="{% static 'css/animate.css' %}">
     <link rel="stylesheet" href="{% static 'css/slicknav.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -32,9 +35,9 @@
                 <div class="container-fluid p-0">
                     <div class="row align-items-center no-gutters">
                         <div class="col-xl-2 col-lg-2">
-                            <div class="logo-img">
-                                <a href="{% url 'home' %}">
-                                    <h2 class="font-monospace">LWN</h2>
+                            <div class="logo-img text-center my-3">
+                                <a href="{% url 'home' %}" class="text-decoration-none">
+                                    <h2 class="fw-bold text-black mb-0">LWN</h2>
                                 </a>
                             </div>
                         </div>
@@ -54,21 +57,29 @@
                         <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                             <div class="log_chat_area d-flex align-items-center">
                                 {% if user.is_authenticated %}
-                                <a href="{% url 'user_logout' %}" class="login">
-                                    <span>Logout</span>
-                                </a>
+                                <div class="dropdown">
+                                    <a class="btn btn-secondary dropdown-toggle login" href="#" id="accountDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <i class="flaticon-user"></i>
+                                        Account
+                                    </a>
+                                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="accountDropdown">
+                                        <li>
+                                            <a class="dropdown-item" href="">Profile</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="{% url 'enrolls' %}">My Courses</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="{% url 'user_logout' %}">Logout</a>
+                                        </li>
+                                    </ul>
+                                </div>
                                 {% else %}
                                 <a href="#test-form" class="login popup-with-form">
                                     <i class="flaticon-user"></i>
                                     <span>log in</span>
                                 </a>
                                 {% endif %}
-                                <div class="live_chat_btn">
-                                    <a class="boxed_btn_orange" href="#">
-                                        <i class="fa fa-phone"></i>
-                                        <span>+880 1715 666904</span>
-                                    </a>
-                                </div>
                             </div>
                         </div>
                         <div class="col-12">
@@ -80,14 +91,36 @@
         </div>
     </header>
     {% if messages %}
-        <ul class="messages">
+        <div id="popup-messages">
             {% for message in messages %}
-            <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                <div class="alert alert-{{ message.tags|default:'info' }} position-fixed top-0 start-50 translate-middle-x mt-3 shadow" style="z-index:1055; min-width:300px;">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <span>{{ message }}</span>
+                        <button type="button" class="btn-close ms-3" aria-label="Close"></button>
+                    </div>
+                </div>
             {% endfor %}
-        </ul>
+        </div>
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                document.querySelectorAll('#popup-messages .alert').forEach(function(popup) {
+                    var btn = popup.querySelector('.btn-close');
+                    if (btn) {
+                        btn.onclick = function() {
+                            popup.remove();
+                        };
+                    }
+                    setTimeout(function() {
+                        popup.remove();
+                    }, 4000);
+                });
+            });
+        </script>
     {% endif %}
-    {% block content %}
-    {% endblock %}
+    <div style="background-image: linear-gradient(to right top, #ed3db5, #a76ade, #4a82e2, #008cc9, #008ca4, #008a89, #198465, #467c40, #607216, #7d6200, #9a4a00, #b21c16);">
+        {% block content %}
+        {% endblock %}
+    </div>
     <footer class="footer footer_bg_1">
         <div class="footer_top">
             <div class="container">
@@ -250,7 +283,8 @@
             </div>
         </div>
     </div>
-    
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
     <script src="{% static 'js/vendor/modernizr-3.5.0.min.js' %}"></script>
     <script src="{% static 'js/vendor/jquery-1.12.4.min.js' %}"></script>
